--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </p>
                     <button class="buttonOne">Sign Up</button>
                 </div>
-                <img class="forest" src="./assets/images/nature.jpg" alt="forest image">
+                <img class="nature" src="./assets/images/nature.jpg" alt="nature image">
             </div>
         </div>
         <div class="containerTwo">
